--- a/frontend/src/app/register-from/register-from.component.css
+++ b/frontend/src/app/register-from/register-from.component.css
@@ -186,6 +186,11 @@ button:active i {
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
+.error-message {
+  color: red;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
+}
 
 @-webkit-keyframes hvr-icon-wobble-horizontal {
   16.65% {
