--- a/frontend/src/app/shared/adding-form/input-row/input-row.component.css
+++ b/frontend/src/app/shared/adding-form/input-row/input-row.component.css
@@ -11,6 +11,7 @@
 input[type="text"],
 input[type="email"],
 input[type="password"],
+input[type="number"],
 select,
 input[type="date"] {
   background-color: #4a5568;
@@ -25,6 +26,7 @@ input[type="date"] {
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus,
+input[type="number"]:focus,
 select:focus,
 input[type="date"]:focus {
   background-color: #2d3748;
