--- a/frontend/src/app/shared/adding-form/adding-form.component.css
+++ b/frontend/src/app/shared/adding-form/adding-form.component.css
@@ -18,9 +18,9 @@
 .form-box {
   position: absolute;
   margin: 0 auto;
-  width: 60%;
+  width: 40%;
   background-color: #2d3748;
-  padding: 50px 0 50px 30px;
+  padding: 30px;
   border-radius: 8px;
   z-index: 1010;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -60,6 +60,7 @@ button {
   font-weight: bold;
   cursor: pointer;
   transition: all 0.15s ease-in-out;
+  align-self: center;
 }
 
 button:hover {
@@ -74,5 +75,13 @@ button:hover {
   100% {
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+
+@media (max-width: 768px) {
+  .form-box {
+    width: 90%;
+    animation: none;
+    padding: 30px;
   }
 }
