--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,26 +1,71 @@
 <div class="login-container">
-    <div class="login-left">
-        <h2>Login!</h2>
-        <!-- <button class="btn btn-google">Sign in with Google</button>
+  <div class="login-left">
+    <h2>Login!</h2>
+    <!-- <button class="btn btn-google">Sign in with Google</button>
         <button class="btn btn-apple">Sign in with Apple</button> -->
-        <p>Please Enter Your Credentials to Access Aour Account</p>
-        <form name="loginForm">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="contact@email.com" [(ngModel)]="enteredEmail">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="**********" [(ngModel)]="enteredPassword">
-            <button type="submit" class="btn btn-signin" (click)="onLoginHandler()">Sign In</button>
-        </form>
-        <p class="text-center">Don't have an account? <a
-                [routerLink]="[{ outlets: { authentication: ['register'] } }]">Sign Up Now</a></p>
+    <p>Please Enter Your Credentials to Access Aour Account</p>
+    <form
+      name="loginForm"
+      (ngSubmit)="onLoginHandler()"
+      #loginForm="ngForm"
+      novalidate
+    >
+      <label for="email">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="contact@email.com"
+        [(ngModel)]="enteredEmail"
+        required
+        #email="ngModel"
+      />
+      <div *ngIf="errors['email']" class="error-message">
+        {{ errors["email"] }}
+      </div>
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="**********"
+        [(ngModel)]="enteredPassword"
+        required
+        #password="ngModel"
+      />
+      <div *ngIf="errors['password']" class="error-message">
+        {{ errors["password"] }}
+      </div>
+      <button type="submit" class="btn btn-signin">Sign In</button>
+      <div *ngIf="errors['general']" class="error-message">
+        {{ errors["general"] }}
+      </div>
+    </form>
+    <p class="text-center">
+      Don't have an account?
+      <a [routerLink]="[{ outlets: { authentication: ['register'] } }]"
+        >Sign Up Now</a
+      >
+    </p>
+  </div>
+  <div class="login-right">
+    <div class="login-info">
+      <img
+        class="logo"
+        src="../../../assets/registrationFrom/Colored Hor.png"
+        alt="Dashboard example"
+      />
+      <h3>Why Choose CaseGuard CRM?</h3>
+      <p>
+        CaseGuard CRM is an all-in-one solution for law firms, designed to
+        streamline your case management and client relationships. With powerful
+        features tailored to legal professionals.
+      </p>
+      <img
+        class="image-holder"
+        src="../../../assets/law.jpg"
+        alt="Dashboard example"
+      />
     </div>
-    <div class="login-right">
-        <div class="login-info">
-            <img class="logo" src="../../../assets/registrationFrom/Colored Hor.png" alt="Dashboard example">
-            <h3>Why Choose CaseGuard CRM?</h3>
-            <p>CaseGuard CRM is an all-in-one solution for law firms, designed to streamline your case management and
-                client relationships. With powerful features tailored to legal professionals.</p>
-            <img class="image-holder" src="../../../assets/law.jpg" alt="Dashboard example">
-        </div>
-    </div>
+  </div>
 </div>
