--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -77,6 +77,7 @@
         </div>
       </div>
       <button type="submit" class="register-btn">Sign Up</button>
+      <p class="text-center">Already have an account? <a [routerLink]="['/']">Login</a></p>
     </form>
   </div>
   <div class="right-half">
