--- a/landingPage/src/app/stats/stats.component.html
+++ b/landingPage/src/app/stats/stats.component.html
@@ -1,8 +1,6 @@
-<!-- Stats Section -->
 <section id="stats" class="stats section dark-background">
 
-    <img src="https://images.pexels.com/photos/5668473/pexels-photo-5668473.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-        alt="" data-aos="fade-in">
+    <img src="https://i.ibb.co/T887yD5/22.jpg" alt="" data-aos="fade-in">
 
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
 
@@ -20,24 +18,23 @@
                     <span>158</span>
                     <p>Projects</p>
                 </div>
-            </div><!-- End Stats Item -->
+            </div>
 
             <div class="col-lg-3 col-md-6">
                 <div class="stats-item text-center w-100 h-100">
                     <span>1453</span>
                     <p>Hours Of Support</p>
                 </div>
-            </div><!-- End Stats Item -->
-
+            </div>
             <div class="col-lg-3 col-md-6">
                 <div class="stats-item text-center w-100 h-100">
                     <span>12</span>
                     <p>Workers</p>
                 </div>
-            </div><!-- End Stats Item -->
+            </div>
 
         </div>
 
     </div>
 
-</section><!-- /Stats Section -->
+</section>
