--- a/landingPage/src/app/faqs/faqs.component.html
+++ b/landingPage/src/app/faqs/faqs.component.html
@@ -1,85 +1,74 @@
 <section id="faq" class="faq section">
-
     <div class="container">
-
         <div class="row gy-4">
-
             <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="content px-xl-5">
                     <h3><span>Frequently Asked </span><strong>Questions</strong></h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+                        Have questions? We have answers. Browse our frequently asked questions to get the information
+                        you need.
                     </p>
                 </div>
             </div>
 
             <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-
                 <div class="faq-container">
                     <div class="faq-item faq-active">
-                        <h3><span class="num">1.</span> <span>Non consectetur a erat nam at lectus urna duis?</span>
+                        <h3><span class="num">1.</span> <span>What services do you provide?</span>
+                            <i class="faq-toggle fas fa-chevron-right"></i>
                         </h3>
                         <div class="faq-content">
-                            <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non
-                                curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus
-                                non.</p>
+                            <p>We offer a range of legal services, including litigation, contract law, and corporate
+                                law,
+                                tailored to meet your needs.</p>
                         </div>
-                        <i class="faq-toggle bi bi-chevron-right"></i>
-                    </div><!-- End Faq item-->
+                    </div>
 
                     <div class="faq-item">
-                        <h3><span class="num">2.</span> <span>Feugiat scelerisque varius morbi enim nunc faucibus a
-                                pellentesque?</span></h3>
+                        <h3><span class="num">2.</span> <span>How can I schedule a consultation?</span>
+                            <i class="faq-toggle fas fa-chevron-right"></i>
+                        </h3>
                         <div class="faq-content">
-                            <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit
-                                laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec
-                                pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus
-                                turpis massa tincidunt dui.</p>
+                            <p>You can schedule a consultation by contacting us through our website or by calling our
+                                office
+                                directly.</p>
                         </div>
-                        <i class="faq-toggle bi bi-chevron-right"></i>
-                    </div><!-- End Faq item-->
+                    </div>
 
                     <div class="faq-item">
-                        <h3><span class="num">3.</span> <span>Dolor sit amet consectetur adipiscing elit
-                                pellentesque?</span></h3>
+                        <h3><span class="num">3.</span> <span>What are your fees?</span>
+                            <i class="faq-toggle fas fa-chevron-right"></i>
+                        </h3>
                         <div class="faq-content">
-                            <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus
-                                pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum
-                                tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna
-                                molestie at elementum eu facilisis sed odio morbi quis</p>
+                            <p>Our fees vary based on the services provided. We offer transparent pricing and will
+                                discuss
+                                costs during your initial consultation.</p>
                         </div>
-                        <i class="faq-toggle bi bi-chevron-right"></i>
-                    </div><!-- End Faq item-->
+                    </div>
 
                     <div class="faq-item">
-                        <h3><span class="num">4.</span> <span>Ac odio tempor orci dapibus. Aliquam eleifend mi in
-                                nulla?</span></h3>
+                        <h3><span class="num">4.</span> <span>Can you represent me in court?</span>
+                            <i class="faq-toggle fas fa-chevron-right"></i>
+                        </h3>
                         <div class="faq-content">
-                            <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit
-                                laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec
-                                pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus
-                                turpis massa tincidunt dui.</p>
+                            <p>Yes, we provide representation in various legal matters, ensuring your rights are
+                                protected
+                                throughout the process.</p>
                         </div>
-                        <i class="faq-toggle bi bi-chevron-right"></i>
-                    </div><!-- End Faq item-->
+                    </div>
 
                     <div class="faq-item">
-                        <h3><span class="num">5.</span> <span>Tempus quam pellentesque nec nam aliquam sem et tortor
-                                consequat?</span></h3>
+                        <h3><span class="num">5.</span> <span>What should I bring to my consultation?</span>
+                            <i class="faq-toggle fas fa-chevron-right"></i>
+                        </h3>
                         <div class="faq-content">
-                            <p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est
-                                ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit
-                                adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
+                            <p>Please bring any relevant documents related to your case, along with a list of questions
+                                you
+                                may have for our attorneys.</p>
                         </div>
-                        <i class="faq-toggle bi bi-chevron-right"></i>
-                    </div><!-- End Faq item-->
-
+                    </div>
                 </div>
-
             </div>
         </div>
-
     </div>
-
 </section>
