--- a/frontend/src/app/components/cases/cases-list/cases.component.css
+++ b/frontend/src/app/components/cases/cases-list/cases.component.css
@@ -58,3 +58,37 @@ select option {
   margin-top: 20vh;
   align-items: center;
 }
+
+/* Center paginator within the container */
+.paginator-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  width: 100%;
+}
+
+/* Style the paginator component */
+.mat-paginator {
+  color: var(--mainTextColor); /* Replace with your desired text color */
+  background-color: #f5f5f5; /* Background color for paginator */
+  border-radius: 5px;
+  padding: 5px;
+}
+
+/* Style the page buttons */
+.mat-paginator .mat-button {
+  color: var(--primaryColor); /* Change the button color */
+  border-radius: 50%;
+  padding: 4px 8px;
+  margin: 0 4px;
+}
+
+/* Style the page select dropdown */
+.mat-paginator .mat-select-value {
+  color: var(--primaryColor); /* Replace with the desired color */
+}
+
+/* Style paginator buttons on hover */
+.mat-paginator .mat-button:hover {
+  background-color: rgba(0, 0, 0, 0.1); /* Lighter shade on hover */
+}
