add case form validation + adjust router view on select case

--- a/frontend/src/app/components/cases/cases-list/cases.component.html
+++ b/frontend/src/app/components/cases/cases-list/cases.component.html
@@ -18,6 +18,7 @@
     [formHeader]="formHeader"
     [formInputRows]="newCasesInputRows"
     [onFormSubmit]="submitForm"
+    [form]="form"
     (backdropClicked)="toggleFormVisibility()"
   ></app-adding-form>
 
