Finish Contact Form Styling

--- a/landingPage/src/app/contact/contact.component.html
+++ b/landingPage/src/app/contact/contact.component.html
@@ -1,10 +1,9 @@
 <section id="contact" class="contact section">
 
-    <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-    </div><!-- End Section Title -->
+        <h2>Contact Us</h2>
+        <p>For any inquiries or to schedule a consultation, please reach out to us.</p>
+    </div>
 
     <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -15,37 +14,37 @@
                 <div class="row gy-4">
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="200">
-                            <i class="bi bi-geo-alt"></i>
+                            <i class="fas fa-map-marker-alt"></i>
                             <h3>Address</h3>
-                            <p>A108 Adam Street</p>
-                            <p>New York, NY 535022</p>
+                            <p>33 Abo Bakr El Sedeek</p>
+                            <p>Heliopolis, Cairo</p>
                         </div>
-                    </div><!-- End Info Item -->
+                    </div>
 
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="300">
-                            <i class="bi bi-telephone"></i>
+                            <i class="fas fa-phone"></i>
                             <h3>Call Us</h3>
-                            <p>+1 5589 55488 55</p>
-                            <p>+1 6678 254445 41</p>
+                            <p class="phoneNumber"><a href="tel:+201097597536">+20 109 759 7536</a></p>
+                            <p class="phoneNumber"><a href="tel:+201203554163">+20 120 355 4163</a></p>
                         </div>
                     </div><!-- End Info Item -->
 
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="400">
-                            <i class="bi bi-envelope"></i>
+                            <i class="fas fa-envelope"></i>
                             <h3>Email Us</h3>
-                            <p>info&#64;shadyragaay.com</p>
                             <p>contact&#64;shadyragaay.com</p>
+                            <!-- <p>support&#64;lawfirm.com</p> -->
                         </div>
                     </div><!-- End Info Item -->
 
                     <div class="col-md-6">
                         <div class="info-item" data-aos="fade" data-aos-delay="500">
-                            <i class="bi bi-clock"></i>
+                            <i class="fas fa-clock"></i>
                             <h3>Open Hours</h3>
                             <p>Monday - Friday</p>
-                            <p>9:00AM - 05:00PM</p>
+                            <p>9:00 AM - 5:00 PM</p>
                         </div>
                     </div><!-- End Info Item -->
 
@@ -84,7 +83,7 @@
                         </div>
                     </div>
                 </form>
-            </div><!-- End Contact Form -->
+            </div>
 
         </div>
 
